tests/golden/expected/example12.stdout.txt
Compile error: tests/fixtures/example12.lamp:15: property access '.' requires a variable or object reference, not a literal value
  15 |     print 2.name
    |     ^
